<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DiaryAssignment</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="str_event_title">Event Title</string>
    <string name="str_event_description">Description</string>
    <string name="txt_btn_save">Save</string>
    <string name="add_event">Add Event</string>
    <string name="str_eventTitleHint">Event title</string>
    <string name="Str_eventDescriptionHint">Event description</string>
    <string name="str_date">Date</string>

</resources>